משיכת נתונים, מסכי תצוגה

--- a/ui/layout/mainLayout.html
+++ b/ui/layout/mainLayout.html
@@ -4,11 +4,12 @@
     <nav class="sidebar">
       <ul>
         <li data-screen="dashboard" onclick="navigate('dashboard')">דף הבית</li>
-        <li data-screen="cases" onclick="handleMenuClick('cases')">משיכת תיקים</li>
-        <li data-screen="switchingModes" onclick="handleMenuClick('switchingModes')">מעבר מצבים</li>
-        <li data-screen="routes" onclick="handleMenuClick('routes')">טבלאות</li>
-        <!-- <li data-screen="SwitchingModes" onclick="handleMenuClick('stateTransition')">מעבר מצבים</li>
-        <li data-screen="routes" onclick="handleMenuClick('routesTable')">טבלאות</li> -->
+        <li data-screen="cases" onclick="handleMenuClick('cases')">בניית תיקים</li>
+        <li data-screen="case" onclick="handleMenuClick('case')">הצגת תיק</li>
+        <li data-screen="switchingModes" onclick="handleMenuClick('switchingModes')">מעבר מצבים ומכתבים</li>
+        <li data-screen="routes" onclick="handleMenuClick('routes')">מסלולים</li>
+        <li data-screen="report" onclick="handleMenuClick('report')">דוחות</li>
+        <li data-screen="history" onclick="handleMenuClick('history')">היסטוריה</li>
       </ul>
     </nav>
   </div>
