--- a/ui/layout/topbar.html
+++ b/ui/layout/topbar.html
@@ -1,5 +1,5 @@
-<div class="topbar">
+<!-- <div class="topbar">
   <span id="usernameDisplay"></span>
   <button onclick="authService.logout()">יציאה</button>
 </div>
-
+ -->
