--- a/ui/layout/mainLayout.html
+++ b/ui/layout/mainLayout.html
@@ -7,7 +7,21 @@
         <li data-screen="cases" onclick="handleMenuClick('cases')">בניית תיקים</li>
         <li data-screen="case" onclick="handleMenuClick('case')">הצגת תיק</li>
         <li data-screen="switchingModes" onclick="handleMenuClick('switchingModes')">מעבר מצבים ומכתבים</li>
-        <li data-screen="routes" onclick="handleMenuClick('routes')">מסלולים</li>
+        <!-- <li data-screen="routes" onclick="handleMenuClick('routes')">מסלולים</li> -->
+        <li class="menu-item has-submenu">
+          <div class="menu-title" onclick="toggleSubmenu(this)">
+            טבלאות ודוחות
+            <span class="arrow">▸</span>
+          </div>
+
+          <ul class="submenu">
+            <li data-screen="routes" onclick="handleMenuClick('routes')">מסלולים</li>
+            <li data-screen="statusesInRoute" onclick="handleMenuClick('statusesInRoute')">מצבים במסלול</li>
+            <li data-screen="casesInRoute" onclick="handleMenuClick('casesInRoute')">תיקים במסלול</li>
+            <li data-screen="allCases" onclick="handleMenuClick('allCases')">כלל התיקים</li>
+          </ul>
+        </li>
+
         <li data-screen="report" onclick="handleMenuClick('report')">דוחות</li>
         <li data-screen="history" onclick="handleMenuClick('history')">היסטוריה</li>
       </ul>
