--- a/css/main.css
+++ b/css/main.css
@@ -389,3 +389,14 @@ select:disabled {
   cursor: not-allowed;
   opacity: 0.7;
 }
+
+.case-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.case-counter {
+  font-weight: bold;
+}
